Begin experimenting with pytorch

--- a/ExcelNet.ipynb
+++ b/ExcelNet.ipynb
@@ -5,11 +5,21 @@
    "execution_count": 1,
    "id": "5a57d049",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/linuxliam/mambaforge/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas\n",
     "import numpy\n",
-    "import random"
+    "import random\n",
+    "import torch"
    ]
   },
   {
@@ -1238,8 +1248,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "458dc86a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mse' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmse\u001b[49m(prediction, actualResults)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mse' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3208eb6e",
+   "id": "3f342a86",
    "metadata": {},
    "outputs": [],
    "source": []
